--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/rapier": "^2.2.0",
+    "@tanstack/react-query": "^5.90.20",
     "@types/three": "^0.182.0",
     "aos": "^2.3.4",
     "framer-motion": "^12.33.0",
